--- a/views/page3.handlebars
+++ b/views/page3.handlebars
@@ -20,9 +20,9 @@
     <label for="name">Name:</label>
     <input type="text" name="name" value="">
     <label for="breed">Breed: </label>
-    <input type="text" name="lastname" value="">
+    <input type="text" name="breed" value="">
     <label for="age">Age:</label>
-    <input type="number" name="beds" value="">
+    <input type="number" name="age" value="">
     <label for="date">Date:</label>
     <input type="number" name="date" value="">
     <input type="submit" value="submit">
