--- a/views/page3.handlebars
+++ b/views/page3.handlebars
@@ -33,7 +33,7 @@
   
 
   <form action="/updateLast2" method="POST">
-    <input type="submit" value="Update Last">
+    <input type="submit" value="Update Last 2">
   </form>
   
   <br/>
