--- a/views/page3.handlebars
+++ b/views/page3.handlebars
@@ -32,9 +32,9 @@
   <br/>
   
 
-  <form action="/updateLast2" method="POST">
+  <!--<form action="/updateLast2" method="POST">
     <input type="submit" value="Update Last 2">
-  </form>
+  </form>-->
   
   <br/>
   <br/>
